--- a/other/covid_case.Rmd
+++ b/other/covid_case.Rmd
@@ -96,8 +96,35 @@ fig2
 
 ```
 
+```{r}
+#data process, us_cases1 is the overall us cases per day
+us_cases1 <- df_case  %>% 
+  count( date,wt = cases,name = "total_cases") %>% 
+  mutate(date = as.Date(us_cases1$date)) %>% 
+  mutate(new_cases = (c(1,diff(total_cases))))
+```
 
 
+### Covid19 Cases in Time Series
+```{r}
+ggplot(us_cases1,aes(x=date,y=total_cases)) +
+  geom_line(color="#69b3a2") + 
+  scale_x_date(date_breaks = "1 month", date_labels = "%b")+
+  theme_light()+
+  ggtitle("Cumulative Covid19 Cases in the US")
+```
+
+
+
+```{r}
+ggplot(us_cases1,aes(date,new_cases)) +
+  geom_line(color="#69b3a2") + 
+  geom_smooth(method = "loess", se = FALSE,span=0.2, lwd = 0.8) +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b")+
+  theme_light()+
+  ylab("daily increase")
+  ggtitle("Daily New Covid19 Cases in the US")
+```
 
 
 
